--- a/gestion_medaille.ui
+++ b/gestion_medaille.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>739</width>
-    <height>376</height>
+    <width>900</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="mouseTracking">
@@ -34,12 +34,20 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>741</width>
-     <height>381</height>
+     <width>901</width>
+     <height>616</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="windowTitle">
+    <string>Gestion animation</string>
+   </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -94,17 +102,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;Année d'obtention&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_ANNEE_OBTENTION">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>240</y>
-       <width>113</width>
-       <height>20</height>
-      </rect>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;Date d'obtention&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_TYPE_S">
@@ -173,22 +171,32 @@
       </rect>
      </property>
     </widget>
+    <widget class="QLineEdit" name="lineEdit_DATE_OBTENTION">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>240</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
      <string>Consulter</string>
     </attribute>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="triM">
      <property name="geometry">
       <rect>
-       <x>400</x>
-       <y>280</y>
-       <width>91</width>
+       <x>730</x>
+       <y>60</y>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>TRI</string>
+      <string>TRI par Type de medaille</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_supprimer">
@@ -204,20 +212,10 @@
       <string>supprimer</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>60</y>
-       <width>113</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>10</x>
        <y>60</y>
        <width>41</width>
        <height>21</height>
@@ -235,19 +233,6 @@
        <width>517</width>
        <height>222</height>
       </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="geometry">
-      <rect>
-       <x>80</x>
-       <y>100</y>
-       <width>91</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>rechercher</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_sup">
@@ -274,6 +259,81 @@
      </property>
      <property name="text">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;ID&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="triID">
+     <property name="geometry">
+      <rect>
+       <x>730</x>
+       <y>170</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TRI par ID</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="triA">
+     <property name="geometry">
+      <rect>
+       <x>730</x>
+       <y>120</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TRI par date</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_rech">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>90</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Recherche </string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_rech">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>60</y>
+       <width>121</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QCalendarWidget" name="calendarWidget">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>270</y>
+       <width>271</width>
+       <height>190</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="stat">
+     <property name="geometry">
+      <rect>
+       <x>740</x>
+       <y>222</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>STAT</string>
      </property>
     </widget>
    </widget>
@@ -414,7 +474,7 @@
     <attribute name="title">
      <string>Somme</string>
     </attribute>
-    <widget class="QTableView" name="tableView_2">
+    <widget class="QTableView" name="tableView_somme">
      <property name="geometry">
       <rect>
        <x>170</x>
@@ -424,7 +484,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_Somme">
+    <widget class="QPushButton" name="somme">
      <property name="geometry">
       <rect>
        <x>340</x>
@@ -435,6 +495,16 @@
      </property>
      <property name="text">
       <string>Somme</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_test">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>380</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
      </property>
     </widget>
    </widget>
