--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>50</y>
+      <x>30</x>
+      <y>60</y>
       <width>821</width>
-      <height>511</height>
+      <height>501</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -69,7 +69,7 @@ margin-top: 2px; /* make non-selected tabs look smaller */
 }</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -881,36 +881,6 @@ border: none;
        <string>type_sport</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="le_nom_r">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>90</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="le_id_r">
-      <property name="geometry">
-       <rect>
-        <x>240</x>
-        <y>90</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="le_type_sport_r">
-      <property name="geometry">
-       <rect>
-        <x>430</x>
-        <y>90</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QTableView" name="tabler">
       <property name="geometry">
        <rect>
@@ -1114,8 +1084,8 @@ border: none;
      <widget class="QPushButton" name="pb_somme">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>410</y>
+        <x>230</x>
+        <y>390</y>
         <width>91</width>
         <height>31</height>
        </rect>
@@ -1140,12 +1110,32 @@ border: none;
        <string>somme</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_s">
+     <widget class="QComboBox" name="comboBox_rn">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>410</y>
-        <width>113</width>
+        <x>70</x>
+        <y>90</y>
+        <width>71</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_ri">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>90</y>
+        <width>62</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_rt">
+      <property name="geometry">
+       <rect>
+        <x>441</x>
+        <y>90</y>
+        <width>81</width>
         <height>22</height>
        </rect>
       </property>
@@ -1154,9 +1144,6 @@ border: none;
      <zorder>label_15</zorder>
      <zorder>label_16</zorder>
      <zorder>label_17</zorder>
-     <zorder>le_nom_r</zorder>
-     <zorder>le_id_r</zorder>
-     <zorder>le_type_sport_r</zorder>
      <zorder>tabler</zorder>
      <zorder>pb_rechercher</zorder>
      <zorder>pb_rechercher_id</zorder>
@@ -1165,12 +1152,9 @@ border: none;
      <zorder>pb_trier_i</zorder>
      <zorder>pb_trier_a</zorder>
      <zorder>pb_somme</zorder>
-     <zorder>lineEdit_s</zorder>
-    </widget>
-    <widget class="QWidget" name="tab_6">
-     <attribute name="title">
-      <string>.</string>
-     </attribute>
+     <zorder>comboBox_rn</zorder>
+     <zorder>comboBox_ri</zorder>
+     <zorder>comboBox_rt</zorder>
     </widget>
    </widget>
   </widget>
