--- a/Desktop/gestiodesemployees/mainwindow.ui
+++ b/Desktop/gestiodesemployees/mainwindow.ui
@@ -69,7 +69,7 @@ margin-top: 2px; /* make non-selected tabs look smaller */
 }</string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -473,16 +473,6 @@ margin-top: 2px; /* make non-selected tabs look smaller */
        <string>ID</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="le_id_supp">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>100</y>
-        <width>113</width>
-        <height>22</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
@@ -512,10 +502,20 @@ margin-top: 2px; /* make non-selected tabs look smaller */
        <pixmap>../../Downloads/257574892_749156223152588_711608511979727183_n (1).png</pixmap>
       </property>
      </widget>
+     <widget class="QComboBox" name="Box_supprimer">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>100</y>
+        <width>73</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
      <zorder>label_25</zorder>
      <zorder>label_11</zorder>
-     <zorder>le_id_supp</zorder>
      <zorder>pushButton</zorder>
+     <zorder>Box_supprimer</zorder>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
