--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,7 +69,7 @@ margin-top: 2px; /* make non-selected tabs look smaller */
 }</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -1081,35 +1081,6 @@ border: none;
        <pixmap>D:/projet c++/olympics.jpg</pixmap>
       </property>
      </widget>
-     <widget class="QPushButton" name="pb_somme">
-      <property name="geometry">
-       <rect>
-        <x>230</x>
-        <y>390</y>
-        <width>91</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton {
-color: #dcdcdc;
-background:#535353;
-border: none;
-font-size:12px;
-font-family:Arial, Helvetica, sans-serif;
-border: 2px solid ;
-border-radius: 8px;
-}
-QPushButton:hover {
-color:#fff;
-	background-color: rgb(0, 0, 127);
-border: none;
-}</string>
-      </property>
-      <property name="text">
-       <string>somme</string>
-      </property>
-     </widget>
      <widget class="QComboBox" name="comboBox_rn">
       <property name="geometry">
        <rect>
@@ -1151,10 +1122,53 @@ border: none;
      <zorder>pb_trier_n</zorder>
      <zorder>pb_trier_i</zorder>
      <zorder>pb_trier_a</zorder>
-     <zorder>pb_somme</zorder>
      <zorder>comboBox_rn</zorder>
      <zorder>comboBox_ri</zorder>
      <zorder>comboBox_rt</zorder>
+    </widget>
+    <widget class="QWidget" name="tab_6">
+     <attribute name="title">
+      <string>somme</string>
+     </attribute>
+     <widget class="QTableView" name="tableView">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>50</y>
+        <width>361</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pb_sommee">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>140</y>
+        <width>81</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+color: #dcdcdc;
+background:#535353;
+border: none;
+font-size:12px;
+font-family:Arial, Helvetica, sans-serif;
+border: 2px solid ;
+border-radius: 8px;
+}
+QPushButton:hover {
+color:#fff;
+	background-color: rgb(0, 0, 127);
+border: none;
+}</string>
+      </property>
+      <property name="text">
+       <string>Somme</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
