--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1105</width>
-    <height>557</height>
+    <width>1180</width>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>100</y>
-     <width>531</width>
-     <height>351</height>
+     <y>0</y>
+     <width>621</width>
+     <height>501</height>
     </rect>
    </property>
    <property name="title">
@@ -35,19 +35,17 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton {
-color: #dcdcdc;
-background:#535353;
-border: none;
-font-size:12px;
-font-family:Arial, Helvetica, sans-serif;
-border: 2px solid ;
+     <string notr="true">QPushButton
+{
 border-radius: 8px;
+color: rgb(255,255,0);
+background-color: rgba(239, 0, 0);
+border: 2px solid ;
 }
-QPushButton:hover {
-color:#fff;
-	background-color: rgb(0, 0, 127);
-border: none;
+QPushButton:hover
+{
+color: rgb(239, 0, 0);
+background-color: rgb(255,255,0);
 }</string>
     </property>
     <property name="text">
@@ -66,7 +64,7 @@ border: none;
     <property name="styleSheet">
      <string notr="true">QLabel {
 color: #000000;
-background:#FFC0CB;
+background:#FFFF00;
 border: none;
 font-size:12px;
 font-family:Arial, Helvetica, sans-serif;
@@ -92,6 +90,14 @@ border: none;
       <height>22</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+     border: 2px solid #6374a6;
+     border-radius: 10px;
+     padding: 0 8px;
+     background: #dce3f7;
+ }</string>
+    </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
@@ -105,7 +111,7 @@ border: none;
     <property name="styleSheet">
      <string notr="true">QLabel {
 color: #000000;
-background:#FFC0CB;
+background:#FFFF00;
 border: none;
 font-size:12px;
 font-family:Arial, Helvetica, sans-serif;
@@ -131,18 +137,65 @@ border: none;
       <height>22</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+     border: 2px solid #6374a6;
+     border-radius: 10px;
+     padding: 0 8px;
+     background: #dce3f7;
+ }</string>
+    </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>-20</y>
+      <width>701</width>
+      <height>591</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>D:/projet c++/o.g/1.PNG</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>360</y>
+      <width>261</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>D:/projet c++/o.g/olympic-rings-icon-20.jpg</pixmap>
+    </property>
+   </widget>
+   <zorder>label_6</zorder>
+   <zorder>label_7</zorder>
+   <zorder>pb_login</zorder>
+   <zorder>label</zorder>
+   <zorder>username</zorder>
+   <zorder>label_2</zorder>
+   <zorder>password</zorder>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>100</y>
-     <width>451</width>
-     <height>351</height>
+     <x>0</x>
+     <y>0</y>
+     <width>561</width>
+     <height>501</height>
     </rect>
    </property>
    <property name="title">
@@ -157,6 +210,14 @@ border: none;
       <height>22</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+     border: 2px solid #6374a6;
+     border-radius: 10px;
+     padding: 0 8px;
+     background: #dce3f7;
+ }</string>
+    </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
@@ -170,7 +231,7 @@ border: none;
     <property name="styleSheet">
      <string notr="true">QLabel {
 color: #000000;
-background:#FFC0CB;
+background:#FFFF00;
 border: none;
 font-size:12px;
 font-family:Arial, Helvetica, sans-serif;
@@ -199,7 +260,7 @@ border: none;
     <property name="styleSheet">
      <string notr="true">QLabel {
 color: #000000;
-background:#FFC0CB;
+background:#FFFF00;
 border: none;
 font-size:12px;
 font-family:Arial, Helvetica, sans-serif;
@@ -225,6 +286,14 @@ border: none;
       <height>22</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+     border: 2px solid #6374a6;
+     border-radius: 10px;
+     padding: 0 8px;
+     background: #dce3f7;
+ }</string>
+    </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
     </property>
@@ -239,25 +308,62 @@ border: none;
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton {
-color: #dcdcdc;
-background:#535353;
-border: none;
-font-size:12px;
-font-family:Arial, Helvetica, sans-serif;
-border: 2px solid ;
+     <string notr="true">QPushButton
+{
 border-radius: 8px;
+color: rgb(255,255,0);
+background-color: rgba(239, 0, 0);
+border: 2px solid ;
 }
-QPushButton:hover {
-color:#fff;
-	background-color: rgb(0, 0, 127);
-border: none;
+QPushButton:hover
+{
+color: rgb(239, 0, 0);
+background-color: rgb(255,255,0);
 }</string>
     </property>
     <property name="text">
      <string>register</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>-20</y>
+      <width>701</width>
+      <height>591</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>D:/projet c++/o.g/1.PNG</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>360</y>
+      <width>261</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>D:/projet c++/o.g/olympic-rings-icon-20.jpg</pixmap>
+    </property>
+   </widget>
+   <zorder>label_5</zorder>
+   <zorder>username_r</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>password_r</zorder>
+   <zorder>pb_register</zorder>
+   <zorder>label_8</zorder>
   </widget>
  </widget>
  <resources/>
